--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,18 @@
-sd
+
+
+
+<li><a href="https://izaiah2621.github.io/mss-game-dev-11/public/index.html">https://izaiah2621.github.io/mss-game-dev-11/public/index.html</a>
+<li><a href="https://github.com/izaiah2621/mss-game-dev-11">https://github.com/izaiah2621/mss-game-dev-11</a>
+<li><a href="..">...</a>
+<li><a href="..">...</a>
+<li><a href="..">...</a>
+<li><a href="..">...</a>
+<li><a href="..">...</a>
+<li><a href="..">...</a>
+<li><a href="T3A08-overview-izaiah.HTML">T3A08-overview-izaiah</a>
+<li><a href="..">...</a>
+<li><a href="..">...</a>
+<li><a href="..">...</a>
+<li><a href="..">...</a>
+<li><a href="..">...</a>
+<li><a href="..">...</a>
