--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 <li><a href="..">...</a>
 <li><a href="..">...</a>
 <li><a href="..">...</a>
-<li><a href="..">...</a>
+<li><a href="file:///C:/Users/936167/OneDrive%20-%20SCHOOL%20DIST%2075%20(MISSION)/g11-muth-izaiah-game-dev-marking/public/T3A06-CSS-Izaiah.html">...</a>
 <li><a href="T3A08-overview-izaiah.HTML">T3A08-overview-izaiah</a>
 <li><a href="..">...</a>
 <li><a href="..">...</a>
