--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 <li><a href="https://github.com/izaiah2621/mss-game-dev-11">https://github.com/izaiah2621/mss-game-dev-11</a>
 <li><a href="T3A03-webpage-izaiah2.html">T3A03-webpage-izaiah2.html</a>
 <li><a href="T3A05-forms-izaiah.html">T3A05-forms-izaiah.html</a>
-<li><a href="..">...</a>
+<li><a href="T3A07-code-Izaiah.HTML">T3A07-code-Izaiah.html</a>
 <li><a href="..">...</a>
 <li><a href="..">...</a>
 <li><a href="T3A08-overview-izaiah.HTML">T3A08-overview-izaiah</a>
